prod/external-servers/truenas/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas-slice
  labels:
    kubernetes.io/service-name: truenas
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "192.168.4.110"
    conditions:
      ready: true
