prod/external-servers/truenas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
