prod/external-servers/truenas/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`truenas.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: truenas
          port: 80
          scheme: http
          serversTransport: truenas-insecure-transport
  tls:
    secretName: truenas-certificate-secret
